6921710: G1: assert(new_finger >= _finger && new_finger < _region_limit,"invariant")

If CM task was aborted while scanning the last object of the specified region and the size of that object is equal to bitmap's granularity then the next offset would be equal or over the region limit which is exactly what the assertion states.

Reviewed-by: ysr, tonyp, jmasa